# factur-ia-api-data

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
contracts/: openapi.json
migrations/: env.py
migrations/versions/: 3e20ae464041_ajout_id_entreprise_a_relance.py  4bdfa2369253_ajout_catalogue_et_maj_tva.py  5cb758852b35_initial_migration.py  770114eb599f_initial_multitenant_schema.py  9bc9e40064a6_refactor_utilisateur_role_pour_tenant.py  b1f2a3c4d5e6_ajout_fk_facture_origine_avoir.py  c3e8b1a9f7d2_ajout_table_reinitialisation_mot_de_passe.py  ccff707cdb81_ajout_nom_original_document_et_.py  eb848f5a63ad_rend_adresse_code_postal_ville_.py  fa2f9c52e921_initial_migration.py
scripts/: export_openapi.py
src/: main.py
src/abonnements/: models.py  router.py  schemas.py
src/audit/: models.py
src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
src/catalogue_produits/: models.py  router.py  schemas.py
src/clients/: models.py  router.py  schemas.py  services.py
src/core/: config.py  database.py  pagination.py  rate_limit.py  security.py  seed.py
src/documents/: exceptions.py  models.py  router.py  service.py
src/entreprises/: exceptions.py  models.py  router.py  schemas.py  service.py
src/factures/: exceptions.py  models.py  router.py  schemas.py  service.py
src/integrations/email/: service.py
src/integrations/siren_gouv/: client.py
src/notifications/: models.py
src/pdp/: models.py
src/relances/: models.py
src/utilisateurs/: models.py  router.py  schemas.py
tests/: test_init.py
