[project]
name = "factur-ia-api-data"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.4",
    "cryptography>=46.0.6",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.24",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "detect-secrets>=1.5.0",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "python-semantic-release>=10.5.3",
    "ruff>=0.15.9",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"] # S ajoute Bandit (Security) directement dans Ruff !

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_repository = false
upload_to_release = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
